// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FallbackToGeneralKnowledgeCheckbox Snapshots matches snapshot in default state 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="relative flex items-start"
    >
      <div
        class="flex items-center h-6"
      >
        <input
          class="
              w-4 h-4
              text-blue-600 
              bg-white border-gray-300 
              rounded focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
              cursor-pointer
              dark:bg-gray-800 dark:border-gray-600 dark:checked:bg-blue-600
              transition-all duration-200
            "
          id="fallback-to-general-knowledge"
          type="checkbox"
        />
      </div>
      <div
        class="ml-3 flex-1"
      >
        <div
          class="flex items-center gap-2 flex-wrap"
        >
          <label
            class="
                text-sm
                font-medium 
                text-gray-900 dark:text-white
                cursor-pointer
              "
            for="fallback-to-general-knowledge"
          >
            Fallback to General Knowledge
          </label>
          <span
            class="
              text-xs px-2 py-0.5 rounded-full font-medium
              bg-gray-100 text-gray-600 dark:bg-gray-800 dark:text-gray-400
              transition-all duration-200
            "
          >
            DISABLED
          </span>
          <div
            class="relative inline-flex"
          >
            <button
              aria-label="More information"
              class="text-gray-400 hover:text-gray-600 dark:text-gray-500 dark:hover:text-gray-300 transition-colors"
              type="button"
            >
              <div
                data-testid="info-icon"
              >
                InfoIcon
              </div>
            </button>
          </div>
        </div>
        <p
          class="
              text-xs
              text-gray-500 dark:text-gray-400
              mt-1
            "
        >
          When enabled, the system will use general knowledge if no specific matches are found in the index
        </p>
      </div>
    </div>
    <div
      class="mt-3 p-3 bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-lg"
    >
      <div
        class="flex items-start gap-2"
      >
        <span
          class="text-blue-600 dark:text-blue-400 text-sm"
        >
          ℹ️
        </span>
        <div
          class="flex-1"
        >
          <p
            class="text-sm text-blue-800 dark:text-blue-300"
          >
            Strict Mode: Only answering from your documents
          </p>
          <p
            class="text-xs text-blue-600 dark:text-blue-400 mt-0.5"
          >
            Enable fallback to allow general knowledge responses when no matches are found
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FallbackToGeneralKnowledgeCheckbox Snapshots matches snapshot when checked 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="relative flex items-start"
    >
      <div
        class="flex items-center h-6"
      >
        <input
          checked=""
          class="
              w-4 h-4
              text-blue-600 
              bg-white border-gray-300 
              rounded focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
              cursor-pointer
              dark:bg-gray-800 dark:border-gray-600 dark:checked:bg-blue-600
              transition-all duration-200
            "
          id="fallback-to-general-knowledge"
          type="checkbox"
        />
      </div>
      <div
        class="ml-3 flex-1"
      >
        <div
          class="flex items-center gap-2 flex-wrap"
        >
          <label
            class="
                text-sm
                font-medium 
                text-gray-900 dark:text-white
                cursor-pointer
              "
            for="fallback-to-general-knowledge"
          >
            Fallback to General Knowledge
          </label>
          <span
            class="
              text-xs px-2 py-0.5 rounded-full font-medium
              bg-green-100 text-green-800 dark:bg-green-900/30 dark:text-green-400
              transition-all duration-200
            "
          >
            ENABLED
          </span>
          <div
            class="relative inline-flex"
          >
            <button
              aria-label="More information"
              class="text-gray-400 hover:text-gray-600 dark:text-gray-500 dark:hover:text-gray-300 transition-colors"
              type="button"
            >
              <div
                data-testid="info-icon"
              >
                InfoIcon
              </div>
            </button>
          </div>
        </div>
        <p
          class="
              text-xs
              text-gray-500 dark:text-gray-400
              mt-1
            "
        >
          When enabled, the system will use general knowledge if no specific matches are found in the index
        </p>
      </div>
    </div>
    <div
      class="
          mt-4 p-3 
          bg-yellow-50 dark:bg-yellow-900/20 
          border border-yellow-200 dark:border-yellow-800 
          rounded-lg
          animate-in fade-in slide-in-from-top-2 duration-200
        "
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            data-testid="warning-icon"
          >
            WarningIcon
          </div>
        </div>
        <div
          class="flex-1"
        >
          <h4
            class="text-sm font-semibold text-yellow-800 dark:text-yellow-300"
          >
            General Knowledge Fallback Enabled
          </h4>
          <p
            class="text-xs text-yellow-700 dark:text-yellow-400 mt-1"
          >
            The AI may provide answers based on its training data when specific information isn't found. This could result in less accurate or out-of-date information.
          </p>
          <div
            class="mt-2 flex gap-3 text-xs"
          >
            <span
              class="inline-flex items-center gap-1 text-yellow-600 dark:text-yellow-500"
            >
              <span>
                ⚠️
              </span>
               May be less accurate
            </span>
            <span
              class="inline-flex items-center gap-1 text-yellow-600 dark:text-yellow-500"
            >
              <span>
                📅
              </span>
               Could be out-of-date
            </span>
            <span
              class="inline-flex items-center gap-1 text-yellow-600 dark:text-yellow-500"
            >
              <span>
                🔍
              </span>
               Not from your data
            </span>
          </div>
        </div>
        <button
          class="text-xs text-yellow-700 dark:text-yellow-400 hover:text-yellow-900 dark:hover:text-yellow-200 underline"
        >
          Disable
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FallbackToGeneralKnowledgeCheckbox Snapshots matches snapshot when disabled 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="relative flex items-start"
    >
      <div
        class="flex items-center h-6"
      >
        <input
          class="
              w-4 h-4
              text-blue-600 
              bg-white border-gray-300 
              rounded focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
              opacity-50 cursor-not-allowed
              dark:bg-gray-800 dark:border-gray-600 dark:checked:bg-blue-600
              transition-all duration-200
            "
          disabled=""
          id="fallback-to-general-knowledge"
          type="checkbox"
        />
      </div>
      <div
        class="ml-3 flex-1"
      >
        <div
          class="flex items-center gap-2 flex-wrap"
        >
          <label
            class="
                text-sm
                font-medium 
                text-gray-400 dark:text-gray-500
                cursor-pointer
              "
            for="fallback-to-general-knowledge"
          >
            Fallback to General Knowledge
          </label>
          <span
            class="
              text-xs px-2 py-0.5 rounded-full font-medium
              bg-gray-100 text-gray-600 dark:bg-gray-800 dark:text-gray-400
              transition-all duration-200
            "
          >
            DISABLED
          </span>
        </div>
        <p
          class="
              text-xs
              text-gray-400 dark:text-gray-500
              mt-1
            "
        >
          When enabled, the system will use general knowledge if no specific matches are found in the index
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FallbackToGeneralKnowledgeCheckbox Snapshots matches snapshot with custom props 1`] = `
<div>
  <div
    class="w-full custom-class"
  >
    <div
      class="relative flex items-start"
    >
      <div
        class="flex items-center h-6"
      >
        <input
          class="
              w-5 h-5
              text-blue-600 
              bg-white border-gray-300 
              rounded focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
              cursor-pointer
              dark:bg-gray-800 dark:border-gray-600 dark:checked:bg-blue-600
              transition-all duration-200
            "
          id="fallback-to-general-knowledge"
          type="checkbox"
        />
      </div>
      <div
        class="ml-3 flex-1"
      >
        <div
          class="flex items-center gap-2 flex-wrap"
        >
          <label
            class="
                text-base
                font-medium 
                text-gray-900 dark:text-white
                cursor-pointer
              "
            for="fallback-to-general-knowledge"
          >
            Custom Label
          </label>
          <span
            class="
              text-xs px-2 py-0.5 rounded-full font-medium
              bg-gray-100 text-gray-600 dark:bg-gray-800 dark:text-gray-400
              transition-all duration-200
            "
          >
            DISABLED
          </span>
          <div
            class="relative inline-flex"
          >
            <button
              aria-label="More information"
              class="text-gray-400 hover:text-gray-600 dark:text-gray-500 dark:hover:text-gray-300 transition-colors"
              type="button"
            >
              <div
                data-testid="info-icon"
              >
                InfoIcon
              </div>
            </button>
          </div>
        </div>
        <p
          class="
              text-sm
              text-gray-500 dark:text-gray-400
              mt-1
            "
        >
          Custom Description
        </p>
      </div>
    </div>
    <div
      class="mt-3 p-3 bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-lg"
    >
      <div
        class="flex items-start gap-2"
      >
        <span
          class="text-blue-600 dark:text-blue-400 text-sm"
        >
          ℹ️
        </span>
        <div
          class="flex-1"
        >
          <p
            class="text-sm text-blue-800 dark:text-blue-300"
          >
            Strict Mode: Only answering from your documents
          </p>
          <p
            class="text-xs text-blue-600 dark:text-blue-400 mt-0.5"
          >
            Enable fallback to allow general knowledge responses when no matches are found
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
